--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 type="button"
                 alt="whatsapp"
             /></a>
-            <a href="#" class="button" id="button">Book Now</a>
+            <a type="button" class="button" id="button">Book Now</a>
           </ul>
         </div>
       </div>
