--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!-- navbar -->
     <nav
-      class="navbar navbar-expand-lg bg-dark border-bottom sticky-top"
+      class="navbar navbar-expand-lg bg-body-tertiary"
       data-bs-theme="dark"
     >
       <div class="container-fluid flex-wrap">
