--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
         <label for="message">Message:</label>
         <input type="text" id="message" name="message" placeholder="Enter Addition Information ">
         <div class="d-flex button-1">
-            <a href="#" class="submit" id="submit">Submit</a>
-            <a href="#" class="close" id="close">Cancel</a>
+            <a type="button" class="submit" id="submit">Submit</a>
+            <a type="button" class="close" id="close">Cancel</a>
           </div>
       </div>
     </div>
