--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto overflow-hidden">
             <li><a href="./index.html" class="active">Home</a></li>
-            <li><a href="">Services</a></li>
+            <li><a href="./service.html">Services</a></li>
             <li><a href="">Contact</a></li>
             <a href="https://wa.me/13658339601" target="_blank">
               <img
