--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <div class="popup-content">
         <div class="logo-1">
           <img src="./images/2.png" alt="logo" />
-          <a class="close-1" id="close-1"
+          <a class="close" id="close"
             ><img src="./images/close.svg" alt=""
           /></a>
         </div>
@@ -114,7 +114,7 @@
           />
           <div class="d-flex button-1">
             <button class="submit" type="submit" id="submit" value="submit">Submit</button>
-            <a class="close" type="button" id="close-4">Cancel</a>
+            <a class="close" type="button" id="close">Cancel</a>
           </div>
         </form>
       </div>
