--- a/index.html
+++ b/index.html
@@ -63,48 +63,85 @@
           /></a>
         </div>
         <form class="form" name="contact-form" action="" method="post">
+          <!-- Name and phone -->
           <div class="d-flex flex-wrap">
             <label for="name">Name:</label>
             <input type="text" id="name" required name="name" />
             <label for="phoneno">Phone no:</label>
             <input type="number" id="phoneno" required name="phoneno" />
           </div>
-          <label for="pickup">Pickup Location:</label>
-          <input type="text" id="pickup" required name="pickup" />
+
+          <!--Address and Postal Code  -->
+          <div class="d-flex flex-wrap">
+            <label for="address"> Pickup Address:</label>
+            <input type="text" id="address" name="address" required/>
+            <label for="postalcode">Postal Code:</label>
+            <input type="number" id="postalcode" name="postalcode" required/>
+          </div>
+
+          <!-- time and date flex  -->
           <div class="d-flex flex-wrap">
             <label for="time">Time:</label>
-            <input type="time" id="time" name="time" />
+            <input type="time" id="time" name="time" required />
             <label for="date">Date:</label>
-            <input type="date" id="date" name="date" />
+            <input type="date" id="date" name="date" required />
           </div>
+
+          <!--Devices  -->
           <div class="d-flex flex-wrap">
-            <label for="devices">Devices:</label>
-            <select name="device" id="device">
+            <label for="devices">Device:</label>
+            <select name="device" id="device" onchange="showInputBox()" required>
               <option value="Select Device" selected>Select Device</option>
               <option value="Mobile">Mobile</option>
               <option value="Laptop">Laptop</option>
               <option value="Iphone">Iphone</option>
-              <option value="Macbook">Macbook</option>
+              <option value="Sumsung">Sumsung</option>
               <option value="iWatch">iWatch</option>
+              <option value="other">Others</option>
             </select>
+
+            <!-- Hidden input box initially -->
+            <div id="otherInput" style="display: none; width: 100%">
+              <p>
+                If you have any other device apart from the ones mentioned above, please provide the details in the message box, including the following:
+                <b>Device Name: [Insert Name]</b>
+              <b> Device Model: [Insert Model]</b>
+
+              </p>
+            </div>
+
+            <!-- problems -->
             <label for="problem">Problem:</label>
-            <select name="problem" id="problem">
+            <select name="problem" id="problem" onchange="showInputBox1()" required>
               <option value="What is Problem???">What is Problem???</option>
               <option value="Screen Isssue">Screen Isssue</option>
               <option value="Battery issue">Battery issue</option>
               <option value="Charging Port Issue">Charging Port Issue</option>
               <option value="Software issue">Software issue</option>
-              <option value="Water or Liquid Issue">Water or Liquid Issue</option>
-              <option value="Speaker and Mic Issue">Speaker and Mic Issue</option>
+              <option value="Water or Liquid Issue">
+                Water or Liquid Issue
+              </option>
+              <option value="Speaker and Mic Issue">
+                Speaker and Mic Issue
+              </option>
+              <option value="other">Others</option>
             </select>
+            <div id="otherInput1" style="display: none; width: 100%">
+              <p>If you encounter any other issues, please feel free to mention them in the message box.</p>
+            </div>
           </div>
+
+          <!-- best way  -->
           <label for="bestway">Best Way:</label>
-          <select name="bestway" id="bestway">
-            <option value="Best way to Contact You???" selected>Best way to Contact You???</option>
+          <select name="bestway" id="bestway" required>
+            <option value="Best way to Contact You???" selected>
+              Best way to Contact You???
+            </option>
             <option value="Call">Call</option>
             <option value="Whatsapp message">Whatsapp message</option>
             <option value="Sms">Sms</option>
           </select>
+          <!-- message -->
           <label for="message">Message:</label>
           <input
             type="text"
@@ -113,13 +150,15 @@
             placeholder="Enter Addition Information "
           />
           <div class="d-flex button-1">
-            <button class="submit" type="submit" id="submit" value="submit">Submit</button>
+            <button class="submit" type="submit" id="submit" value="submit">
+              Submit
+            </button>
             <a class="close" type="button" id="close">Cancel</a>
           </div>
         </form>
       </div>
     </div>
-  
+
     <!-- home Container -->
     <div class="container">
       <img src="./images/Banner.jpg" alt="" />
@@ -127,7 +166,7 @@
         <button type="button" id="button-2">Book Now</button>
       </div>
     </div>
-  
+
     <!-- flex services with Mobile and Laptop -->
     <div class="container mobile-laptop">
       <img src="./images/iphone.jpg" alt="" />
@@ -166,8 +205,7 @@
       </div>
     </div>
 
-
-      <!-- Services container -->
+    <!-- Services container -->
     <div class="container services">
       <h1 class="text-center">Services</h1>
       <p class="text-5">
@@ -186,9 +224,11 @@
       <button class="button-4" onclick="Goto()">Read More</button>
     </div>
 
-
     <div class="footer">
-      <p>All &copy;Copyright Reserved By <a href="./index.html">Fixophones.com</a>.</p>
+      <p>
+        All &copy;Copyright Reserved By
+        <a href="./index.html">Fixophones.com</a>.
+      </p>
     </div>
     <!-- bootstrap -->
     <script
@@ -202,19 +242,19 @@
       crossorigin="anonymous"
     ></script>
     <script>
-        // menu book now button
+      // menu book now button
       document.getElementById("button").addEventListener("click", function () {
         document.querySelector(".popup").style.display = "flex";
         document.querySelector("#button-2").style.display = "none";
       });
-    //   2nd button
+      //   2nd button
       document
         .getElementById("button-2")
         .addEventListener("click", function () {
           document.querySelector(".popup").style.display = "flex";
           document.querySelector("#button-2").style.display = "none";
         });
-        // menu Close button
+      // menu Close button
       document.querySelector("#close").addEventListener("click", function () {
         document.querySelector("#button-2").style.display = "flex";
         document.querySelector(".popup").style.display = "none";
@@ -224,8 +264,8 @@
         document.querySelector(".popup").style.display = "none";
       });
       // page chaning button in readmore in service container
-      function Goto(){
-        window.location.href='./service.html';
+      function Goto() {
+        window.location.href = "./service.html";
       }
     </script>
     <script src="./js/script.js"></script>
