--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <label for="address"> Pickup Address:</label>
             <input type="text" id="address" name="address" required/>
             <label for="postalcode">Postal Code:</label>
-            <input type="number" id="postalcode" name="postalcode" required/>
+            <input type="text" id="postalcode" name="postalcode" required/>
           </div>
 
           <!-- time and date flex  -->
