--- a/service.html
+++ b/service.html
@@ -68,7 +68,7 @@
             <label for="name">Name:</label>
             <input type="text" id="name" required name="name" />
             <label for="phoneno">Phone no:</label>
-            <input type="number" id="phoneno" required name="phoneno" />
+            <input type="text" id="phoneno" required name="phoneno" />
           </div>
 
           <!--Address and Postal Code  -->
