--- a/service.html
+++ b/service.html
@@ -111,9 +111,9 @@
             </div>
 
             <!-- Problems -->
-            <label for="problem">Problem:</label>
-            <select name="problem" id="problem" onchange="showInputBox1()" required>
-              <option value="What is Problem???">What is Problem???</option>
+            <label for="problem">Issue:</label>
+            <select name="issue" id="problem" onchange="showInputBox1()" required>
+              <option value="What is Issue???">What is Issue???</option>
               <option value="Screen Isssue">Screen Isssue</option>
               <option value="Battery issue">Battery issue</option>
               <option value="Charging Port Issue">Charging Port Issue</option>
